--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
   }
 
   .jumbotron {
-    background-image: url("../images/nasa.jpg");
+    background-image: url("https://raw.githubusercontent.com/mayajaral/UFOs/main/images/nasa.jpg");
     background-size: 100% 100%;
     text-align: center;
   }
